--- a/package.json
+++ b/package.json
@@ -1,24 +1,12 @@
 {
-  "name": "bun-react-template",
-  "version": "0.1.0",
-  "private": true,
+  "name": "web_music_player",
+  "module": "index.ts",
   "type": "module",
-  "main": "src/index.tsx",
-  "module": "src/index.tsx",
-  "scripts": {
-    "dev": "bun --hot src/index.tsx",
-    "start": "NODE_ENV=production bun src/index.tsx",
-    "build": "bun run build.ts"
-  },
-  "dependencies": {
-    "bun-plugin-tailwind": "^0.0.14",
-    "react": "^19",
-    "react-dom": "^19",
-    "tailwindcss": "^4.0.6"
-  },
+  "private": true,
   "devDependencies": {
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5"
   }
 }
