--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     // Environment setup & latest features
     "lib": [
+      "dom",
       "ESNext"
     ],
     "target": "ESNext",
